traverseBranchless() performance improvement: cycle check only needs to check against first node